canary-proxy/k8s/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-proxy
  labels:
    app: canary-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-proxy
  template:
    metadata:
      labels:
        app: canary-proxy
    spec:
      containers:
        - name: container
          image: canary-proxy:1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "128M"
