canary-proxy/k8s/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-proxy
spec:
  selector:
    app: canary-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
