canary-proxy/k8s/03_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-proxy
  labels:
    app: canary-proxy
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: canary-proxy
                port:
                  number: 80
